fonts fixed, overrode font-face rules by accident, update correct image for main, header overflows and sizing fixes

--- a/news-explorer/src/components/App/App.css
+++ b/news-explorer/src/components/App/App.css
@@ -3,7 +3,7 @@
   min-width: 320px;
   width: 100%;
   min-height: 100vh;
-  background-color: #1A1B22;
+  background-color: #fff;
   color: #fff;
   margin: 0 auto;
   -webkit-font-smoothing: antialiased;
