--- a/news-explorer/src/components/Header/Header-Button/HeaderButton.css
+++ b/news-explorer/src/components/Header/Header-Button/HeaderButton.css
@@ -68,5 +68,7 @@
 @media screen and (max-width: 550px) {
   .header__button-logic {
     padding: 3% 37%;
+    max-width: 285px;
+    max-height: 55px;
   }
 }
